<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="339dp">

        <net.skyscanner.backpack.text.BpkText
            style="@style/bpkTextHeading1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/departure" />

        <net.skyscanner.backpack.card.BpkCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cornerStyle="large"
            app:elevationLevel="focused">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/flight_information_title" />

                <net.skyscanner.backpack.text.BpkText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/flight_number" />
            </LinearLayout>

        </net.skyscanner.backpack.card.BpkCardView>

        <net.skyscanner.backpack.card.BpkCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cornerStyle="large"
            app:elevationLevel="focused">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/departure_title" />

                <net.skyscanner.backpack.text.BpkText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/departure_airport" />

                <net.skyscanner.backpack.text.BpkText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/departure_time" />
            </LinearLayout>

        </net.skyscanner.backpack.card.BpkCardView>

        <net.skyscanner.backpack.card.BpkCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cornerStyle="large"
            app:elevationLevel="focused">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/arrival_title" />

                <net.skyscanner.backpack.text.BpkText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/arrival_airport" />

                <net.skyscanner.backpack.text.BpkText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/arrival_time" />
            </LinearLayout>

        </net.skyscanner.backpack.card.BpkCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>